Revert DPC-34 since